fixing error, new JUnit test #3

--- a/train-sensor/build.gradle
+++ b/train-sensor/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    compile project(':train-system')
     compile project(':train-interfaces')
     compile project(':train-user')
 
